# rust_tokio_chat_app

./: .env.local  Cargo.toml  README.md  docker-compose.yml
migrations/2023-07-02-011854_user/: up.sql
migrations/2023-07-02-012038_room/: down.sql  up.sql
migrations/2023-07-02-012049_member/: down.sql  up.sql
migrations/2023-07-02-012056_message/: up.sql
src/: auth.rs  errors.rs  helpers.rs  lib.rs  main.rs
src/db/: member.rs  message.rs  mod.rs  room.rs  user.rs
src/routes/: mod.rs  models.rs  room.rs  user.rs
src/ws/: lobby.rs  mod.rs
