[package]
name = "rust_tokio_chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.88"
tokio-postgres = {version = "0.7.8", features = ["with-chrono-0_4"]}
tokio-postgres-migration = "0.1.0"
axum = {version = "0.6.18", features = ["headers", "ws", "macros"]}
bb8-postgres = "0.8.1"
bb8 = "0.8.1"
tower-http = { version = "0.4.1", features = ["cors"] }

dotenv = "0.15.0"
derive_more = "0.99.17"
jsonwebtoken = "8.3.0"
futures = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }